2007-08-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-base.c: 
	Remove forgotten c++ comment
	(bug #462813, hopefully)
	
	* src/yelp-main.c: 
	Mark -help contents for translation
	(bug #450168 - Gabor Kelemen)
	
	* yelp.desktop.in.in: 
	Remove suffix from icon
	(bug #463281 - Sven Arvidsson)
	
	* src/yelp-toc.c:
	* src/yelp-search.c:
	Make error messages somewhat less cryptic
	Remove strange markup that resulted from emacs
	and unicode characters not mixing.
	
	* src/yelp-print.c:
	Mark title as translatable (bug #458693 -
	Gabor Kelemen)
	
	* src/yelp-search-parser.c: 
	* src/yelp-window.c:
	Redefine langs to allow compilation with
	Beagle (bug #462056)
	Make results page show again (where did it go, I wonder?)
	
2007-07-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-transform.c:
	- Register EXSLT extensions, so the world can be right again

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

        * configure.in: 
        * NEWS:
        - Version 2.19.1

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/Makefile.am: 
	Disable test programs for now
	
== REWORK CHANGES ==

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	Merge of yelp rework branch:
	- Depreciate yelp-*-pager in favour of
	  yelp-document and such.
	  Gives us on-demand loading of pages
	- Switch to using rarian instead of scrollkeeper
	- Update to using shiny newness of gnome-doc-utils
	- Make printing docbook pretty
	- Clean up lots of errors and general cleanup
	  of other source files
	- Make our resolver much, much better
	  - and remove reliance on libgnome there
	

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-settings.c: 
	* configure.in:
	* src/yelp-settings.h:
	* src/Makefile.am:
	* stylesheets/yelp-common.xsl:
	Make themes sort-of work.  Good enough for
	a release, anyway.

2007-07-29  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	Make loading of files directly work again
	
2007-07-24  Don Scorgie  <dscorgie@svn.gnome.org>
